# Mindlink

./: .gitignore  Cargo.toml  README.MD
src/: ai.rs  ai_memory.rs  main.rs
