[package]
name = "mindlink"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
dotenvy = "0.15"
futures-util = "0.3"